Menu Dropdown Added
Dropdown
New CSS page
Added New pages to be filled later.

--- a/comment.html
+++ b/comment.html
@@ -2,20 +2,45 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
-        <title>Comment - Timothy's Showcase</title> 
+        <title>Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
-        <div class='menubar'><p>
+        <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
-            <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="menu">Video Games</a>
-            <a href="school.html" class="menu">School</a>
-            <a href="comment.html" class="select">Comment</a>
-        </p></div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="javascript.html">Javascript</a>
+                  <a href="cad.html">CAD</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="minecraft.html">Minecraft</a>
+                    <a href="brawlstars.html">Brawl Stars</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="math.html">Math</a>
+                    <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="comment.html">Comment</a>
+                  <a href="pm.html">Private Message</a>
+                </div>
+            </div>
+        </div></center>
     </head>
     <body>
-       <p>The comment system uses google forms and google sheets in order to work.</p>
+        <h1 class="head">Comment</h1>
+       <p>The comment system uses google forms and google sheets in order to work. Also note that it may take up to 5 minutes for comments to show up once they are approved. I may change the system in the future, but right now I am working on other stuff.</p>
        <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScndgqclxgitll9wxLpvXnK6Gt2uvxGSnBzyLevRCpDAPeOdA/viewform?embedded=true" width="640" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
        <center><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRGmdm0fn-RUSto5I5Vd9tuocP8q4OKvAbz7phllLAa4XFwDpQEfVybWY_P-3SFWHWsNPMND_l4u17l/pubhtml?gid=325637427&amp;single=true&amp;widget=true&amp;headers=false" width="800" height="500"></iframe></center>
     <footer>
