--- a/minecraft.html
+++ b/minecraft.html
@@ -2,19 +2,44 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
-        <title>Video Games - Timothy's Showcase</title> 
+        <title>Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
-        <div class='menubar'><p>
+        <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
-            <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="select">Video Games</a>
-            <a href="school.html" class="menu">School</a>
-            <a href="comment.html" class="menu">Comment</a>
-        </p></div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="javascript.html">Javascript</a>
+                  <a href="cad.html">CAD</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="minecraft.html">Minecraft</a>
+                    <a href="brawlstars.html">Brawl Stars</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="math.html">Math</a>
+                    <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="comment.html">Comment</a>
+                  <a href="pm.html">Private Message</a>
+                </div>
+            </div>
+        </div></center>
     </head>
     <body>
+        <h1 class="head">Minecraft</h1>
         <p>I play video games. Here is a list of some of them.</p>
         <h1>Minecraft</h1>
         <p>Minecraft is one of the best video games because there are so many possibilities. In survial, there are so many ways to defeat the game, and in creative there are so many different things you can do. You can even play with friends on servers with classic minecraft, or with added mods. Here are things I have done in Minecraft.</p>
