--- a/pm.html
+++ b/pm.html
@@ -39,16 +39,15 @@
         </div></center>
     </head>
     <body>
-        <h1 class="head">Home</h1>
-        <p>Welcome to my website. This is where I will write different things I have done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
-        <ol><strong>6 Things I Like:</strong>
-            <li>Rock Climbing</li>
-            <li>Minecraft</li>
-            <li>CAD</li>
-            <li>Programming</li>
-            <li>Sleeping</li>
-            <li>Sushi</li>
-        </ol>
+        <h1 class="head">Private Message</h1>
+        <p>Use this form if you need to contact me in private, such as for copyright infringement, a glitch you found, etc. If you want to say a general comment, like just saying that the website is fun, please use <a href="comment.html">the comments</a>.</p>
+        <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2cff9E9l8BbsmpA6j5wDi2_MSfpWrG0cFoaS-WIYo8q3O9g/viewform?embedded=true" width="640" height="459" frameborder="0" marginheight="0" marginwidth="0">Contact Form Loading…</iframe></center>
+        <h2>FAQ</h2>
+        <p>
+            <strong>What is the passphrase to the Secret Information page?</strong><br>
+            The Password is "Timothy". Right now it doesn't contain any secrent information so the password will be visible for now. <br><br>
+
+        </p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
