--- a/technology.html
+++ b/technology.html
@@ -39,16 +39,8 @@
         </div></center>
     </head>
     <body>
-        <h1 class="head">Home</h1>
-        <p>Welcome to my website. This is where I will write different things I have done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
-        <ol><strong>6 Things I Like:</strong>
-            <li>Rock Climbing</li>
-            <li>Minecraft</li>
-            <li>CAD</li>
-            <li>Programming</li>
-            <li>Sleeping</li>
-            <li>Sushi</li>
-        </ol>
+        <h1 class="head">Technology</h1>
+        <p>This page currently has no content. Select a technology option from the dropdown.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
