--- a/404.html
+++ b/404.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Error 404 - Timothy's Showcase</title> 
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
+        <link rel="icon" type="image/png" href="media/favicon.png">
+        <title>Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
-        <div class='menubar'><p>
+        <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
-            <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="menu">Video Games</a>
-            <a href="school.html" class="menu">School</a>
-            <a href="comment.html" class="menu">Comment</a>
-        </p></div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="javascript.html">Javascript</a>
+                  <a href="cad.html">CAD</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="minecraft.html">Minecraft</a>
+                    <a href="brawlstars.html">Brawl Stars</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="math.html">Math</a>
+                    <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="comment.html">Comment</a>
+                  <a href="pm.html">Private Message</a>
+                </div>
+            </div>
+        </div></center>
     </head>
     <body>
-        <h1>Error 404</h1>
+        <h1 class="head">Error 404</h1>
         <p>Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!<br><strong>You will redirected to the homepage in 10 seconds.</strong></p>
         <img src="media/cat.jpg" alt="Cat with different colored eyes" style="width:500px;height:400px;" class="center">
         <meta http-equiv="refresh" content="10; url=index.html">
