--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Contact Me - Timothy's Showcase</title> 
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
+        <link rel="icon" type="image/png" href="media/favicon.png">
+        <title>Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
-        <div class='menubar'><p>
+        <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
-            <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="menu">Video Games</a>
-            <a href="school.html" class="menu">School</a>
-            <a href="comment.html" class="menu">Comment</a>
-        </p></div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="javascript.html">Javascript</a>
+                  <a href="cad.html">CAD</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="minecraft.html">Minecraft</a>
+                    <a href="brawlstars.html">Brawl Stars</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="math.html">Math</a>
+                    <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="comment.html">Comment</a>
+                  <a href="pm.html">Private Message</a>
+                </div>
+            </div>
+        </div></center>
     </head>
     <body>
-        <p>Use this form if you need to contact me in private, such as for copyright infringement, a glitch you found, etc. If you want to say a general comment, like just saying that the website is fun, please use <a href="comment.html">the comments</a>.</p>
-        <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2cff9E9l8BbsmpA6j5wDi2_MSfpWrG0cFoaS-WIYo8q3O9g/viewform?embedded=true" width="640" height="459" frameborder="0" marginheight="0" marginwidth="0">Contact Form Loading…</iframe></center>
-        <h2>FAQ</h2>
-        <p>
-            <strong>What is the passphrase to the Secret Information page?</strong><br>
-            The Password is "Timothy". Right now it doesn't contain any secrent information so the password will be visible for now. <br><br>
-
-        </p>
+        <h1 class="head">Contact</h1>
+        <p>This page currently has no content. Please select a contact option in the dropdown.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
