--- a/encrypted.html
+++ b/encrypted.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html class="staticrypt-html">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Encrypted - Timothy's Showcase</title> 
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
+        <link rel="icon" type="image/png" href="media/favicon.png">
+        <title>Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
-        <div class='menubar'><p>
+        <center><div class='menubar'>
             <a href="index.html" class="menu">Return Home</a>
-        </p></div>
+        </div></center>
+        <h1 class="head">Secret Information</h1>
     <meta charset="utf-8">
-    <title>Protected Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- do not cache this page -->
