--- a/javascript.html
+++ b/javascript.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Javascript - Timothy's Showcase</title> 
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
+        <link rel="icon" type="image/png" href="media/favicon.png">
+        <title>Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
-        <div class='menubar'><p>
+        <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
-            <a href="javascript.html" class="select">Javascript</a>
-            <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="menu">Video Games</a>
-            <a href="school.html" class="menu">School</a>
-            <a href="comment.html" class="menu">Comment</a>
-        </p></div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="javascript.html">Javascript</a>
+                  <a href="cad.html">CAD</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="minecraft.html">Minecraft</a>
+                    <a href="brawlstars.html">Brawl Stars</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="math.html">Math</a>
+                    <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="comment.html">Comment</a>
+                  <a href="pm.html">Private Message</a>
+                </div>
+            </div>
+        </div></center>
     </head>
     <body>
+        <h1 class="head">Javascript</h1>
         <p>Here is a collection of things I have done in Javascript.</p>
         <h1>Sun Setting</h1>
         <p>Here is a project I coded on Khan Academy, where you can program using javascript and processing js. I coded it to have the sun start at the top then slowly move to the bottom as the background color slowly changes to simulate a sunset.</p>
