--- a/math.html
+++ b/math.html
@@ -39,16 +39,22 @@
         </div></center>
     </head>
     <body>
-        <h1 class="head">Home</h1>
-        <p>Welcome to my website. This is where I will write different things I have done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
-        <ol><strong>6 Things I Like:</strong>
-            <li>Rock Climbing</li>
-            <li>Minecraft</li>
-            <li>CAD</li>
-            <li>Programming</li>
-            <li>Sleeping</li>
-            <li>Sushi</li>
-        </ol>
+        <h1 class="head">Math</h1>
+        <p>Hello again. Here is a collection of things that are part of school. Below you can find different stories I wrote for english class, my favorite tools for school, and more.</p>
+        <h1>Math Tools</h1>
+        <h2>Favorite Calculator: <a href="https://www.desmos.com/calculator" Target="_blank">Desmos Graphing Calculator</a></h2>
+        <ul><strong>Pros</strong>
+            <li>Contains Many Functions.</li>
+            <li>Autmoatically Graphs Equations.</li>
+            <li>Variables can be set to change numbers (slowly increase/decrease) allowing your graphs to move.</li>
+            <li>There are folders to organize all your functions. This is useful if you are making a drawing with math and while doing math to sort your equations by question number.</li>
+            <li>You can create an account to save all your graphs.</li>
+            <li>There are mobile apps so you can graph and calculate on the go.</li>
+        </ul>
+        <ul><strong>Cons</strong>
+            <li>Saved graphs just appear in one long list, so for me it can be a little cluttered.</li>
+        </ul>
+        <p>Overall this is my favorite calculator for school and fun stuff like <a href="https://www.desmos.com/calculator/me6m2mqmy8" target="_blank">this</a>. I would highly recommend this calculator to everyone.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
