Fixed auto redirect error

--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
         <h1 class="head">Error 404</h1>
         <p>Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!<br><strong>You will redirected to the homepage in 10 seconds.</strong></p>
         <img src="media/cat.jpg" alt="Cat with different colored eyes" style="width:500px;height:400px;" class="center">
-        <meta http-equiv="refresh" content="10; url=index.html">
+        <meta http-equiv="refresh" content="10; url=https://timophobic.github.io/index.html">
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
