--- a/javascript.html
+++ b/javascript.html
@@ -30,6 +30,12 @@
                 </div>
             </div>
             <div class="dropdown">
+                <button class="dropbtn"><a href="friends.html" class="droplink">Friends ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="sitebuttons.html">Site Buttons</a>
+                </div>
+            </div>
+            <div class="dropdown">
                 <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
                 <div class="dropdown-content">
                   <a href="comment.html">Comment</a>
@@ -81,15 +87,28 @@
         </ol>
         <p>To change the color and thickness of the grid, use the stroke, strokeWeight, and fill functions.</p>
         <br><p>If you would like to see a bunch of random messy projects I made in javascript, please see my <a href="https://www.khanacademy.org/profile/Timcraftmine/projects" target="_blank">Khan Academy Profile</a>. It's very clutered with random stuff and projects that don't work, so be careful. (also some projects say "WIP" (stands for 'Work in Progress'), but I'm not planning to go back to them anytime soon right now lol).</p>
+
+        <p>Test Comments: </p>
+        <iframe id="forum_embed"
+        src="javascript:void(0)"
+        scrolling="no"
+        frameborder="0"
+        width="900"
+        height="700">
+        </iframe>
+        <script type="text/javascript">
+        document.getElementById('forum_embed').src =
+            'https://groups.google.com/forum/embed/?place=forum/timothys-portfolio'
+            + '&showsearch=true&showpopout=true&showtabs=false'
+            + '&parenturl=' + encodeURIComponent(window.location.href);
+        </script>
+
+
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
         <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
-        <p>
-            <a href="encrypted.html" class="button">Secret Information</a>
-            <a href="contact.html" class="button">Contact Me</a>
-        </p>
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </footer>
  
     <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.min.js"></script> 
