--- a/sitebuttons.html
+++ b/sitebuttons.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
-        <title>Timothy's Showcase</title> 
-        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
+        <title>Timothy's Portfolio</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Portfolio</a></h1>
         <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
             <div class="dropdown">
@@ -49,9 +49,10 @@
         <p><strong>NOTE: Please do not use these at the current moment, as the code is still being refined, and images are being relocated. If you use them now they will break!</strong> They are currently published in order to test a feature.</p>
         <p>Here is a list of all my site buttons (blog buttons, but I'm not really a blog), so you can choose whichever one you want. They will all automatically update if I change my site button logo, but if I change my website url (very likely because I don't like my current url that much) then the image and url will break.</p>
         <h1>1 - Flashing image without text on bottom</h1>
+        <center><a href="code/sitebutton/flash-notext.txt" target="_blank" class="button">Embed this Button</a></center><br>
                 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"><style>body{font-family: 'Montserrat', sans-serif;}</style><center>
                     <a href="https://timophobic.github.io" target="_blank"><img src="media/sitebutton/flash.gif" target="_blank" width="512" height="512" title="insert title" alt="Timothy's Website Logo">
-                    </a>
+                    </a></center>
         <h1>2 - Still image with text on bottom in font montserrat on bottom</h1>
             <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"><style>body{font-family: 'Montserrat', sans-serif;}</style><center>
             <a href="https://timophobic.github.io" target="_blank"><img src="https://timophobic.github.io/media/sitebutton.png" target="_blank" width="512" height="512" title="insert title" alt="Timothy's Website Logo">
@@ -62,14 +63,11 @@
                 <a href="https://timophobic.github.io" target="_blank"><img src="media/sitebutton/flash.gif" target="_blank" width="512" height="512" title="insert title" alt="Timothy's Website Logo">
                 
                 </a><br><p font-family="Montserrat">Sunshine Stickers @sunshinestickers.wordpress.com</p></center>
+        <h1>Alternative</h1>
+        <p>Do none of these work? You can right click on any of the images you want and download it to put it in your blog.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
-        <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
-        <p>
-            <a href="encrypted.html" class="button">Secret Information</a>
-            <a href="contact.html" class="button">Contact Me</a>
-        </p>
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+        <center><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</center>
     </footer>
 </html>
