--- a/literature.html
+++ b/literature.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
-        <title>Timothy's Showcase</title> 
-        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
+        <title>Timothy's Portfolio</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Portfolio</a></h1>
         <center><div class='menubar'>
             <a href="index.html" class="menu">Home</a>
             <div class="dropdown">
@@ -27,6 +27,12 @@
                 <div class="dropdown-content">
                     <a href="math.html">Math</a>
                     <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="friends.html" class="droplink">Friends ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="sitebuttons.html">Site Buttons</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -131,11 +137,6 @@
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
-        <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
-        <p>
-            <a href="encrypted.html" class="button">Secret Information</a>
-            <a href="contact.html" class="button">Contact Me</a>
-        </p>
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+        <center><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</center>
     </footer>
 </html>
