--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
 
             <script type="text/javascript" src="js/lib/jquery-1.11.1.min.js" ></script>
             <script> 
-              $(function(){ $("head").load("header.html") });
+              $(function(){ $("header").load("header.html") });
             </script>
 
     </body>
