--- a/header.html
+++ b/header.html
@@ -1,2 +1,42 @@
-<!DOCTYPE html>
-<p>test</p>
+<link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/menu.css">
+        <link rel="icon" type="image/png" href="media/favicon.png">
+        <title>Timothy's Portfolio</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Portfolio</a></h1>
+        <center><div class='menubar'>
+            <a href="index.html" class="menu">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="javascript.html">Javascript</a>
+                  <a href="cad.html">CAD</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="minecraft.html">Minecraft</a>
+                    <a href="brawlstars.html">Brawl Stars</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="math.html">Math</a>
+                    <a href="literature.html">Literature</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="friends.html" class="droplink">Friends ▾</a></button>
+                <div class="dropdown-content">
+                    <a href="sitebuttons.html">Site Buttons</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
+                <div class="dropdown-content">
+                  <a href="comment.html">Comment</a>
+                  <a href="pm.html">Private Message</a>
+                </div>
+            </div>
+        </div></center>
