--- a/literature.html
+++ b/literature.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <<head>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
         <title>Timothy's Portfolio</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Portfolio</a></h1>
         <center><div class='menubar'>
-            <a href="index.html" class="menu">Home</a>
+            <a href="index.html" class="droplink">Home</a>
             <div class="dropdown">
                 <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
                 <div class="dropdown-content">
@@ -16,8 +16,9 @@
                 </div>
             </div>
             <div class="dropdown">
-                <button class="dropbtn"><a href="games.html" class="droplink">Games ▾</a></button>
+                <button class="dropbtn"><a href="activities.html" class="droplink">Activities ▾</a></button>
                 <div class="dropdown-content">
+                    <a href="rockclimbing.html"> Rock Climbing</a>
                     <a href="minecraft.html">Minecraft</a>
                     <a href="brawlstars.html">Brawl Stars</a>
                 </div>
