--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <h1 class="head">Test Page</h1>
-        <p>This is a test page. Different HTML, CSS, and Javascript features will be tested hear.</p>
+        <p>This is a test page. Different HTML, CSS, and Javascript features will be tested here.</p>
 
             <script type="text/javascript" src="js/lib/jquery-1.11.1.min.js" ></script>
             <script> 
