--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </div></center>
+        <meta http-equiv="refresh" content="0; url=https://tims-portfolio.glitch.me/">
     </head>
     <body>
         <h1 class="head">Home</h1>
