--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/png" href="media/favicon.png">
         <title>Timothy's Portfolio</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Portfolio</a></h1>
+        <!--
         <center><div class='menubar'>
             <a href="index.html" class="droplink">Home</a>
             <div class="dropdown">
@@ -44,19 +45,12 @@
                 </div>
             </div>
         </div></center>
+        -->
         <meta http-equiv="refresh" content="0; url=https://tims-portfolio.glitch.me/">
     </head>
     <body>
-        <h1 class="head">Home</h1>
-        <p>Welcome to my website. This is where I will write different things I have done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
-        <ol><strong>6 Things I Like:</strong>
-            <li>Rock Climbing</li>
-            <li>Minecraft</li>
-            <li>CAD</li>
-            <li>Programming</li>
-            <li>Sleeping</li>
-            <li>Sushi</li>
-        </ol>
+        <h1 class="head">NEW WEBSITE</h1>
+        <p>I'm using glitch.com to host it now!</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
