--- a/games.html
+++ b/games.html
@@ -45,9 +45,10 @@
             </div>
         </div></center>
     </head>
+    </head>
     <body>
-        <h1 class="head">Home</h1>
-        <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done, </p>
+        <h1 class="head">Games</h1>
+        <p>This page currently has no content. Select a video game from the dropdown.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
