--- a/activities.html
+++ b/activities.html
@@ -45,10 +45,9 @@
             </div>
         </div></center>
     </head>
-    </head>
     <body>
-        <h1 class="head">Games</h1>
-        <p>This page currently has no content. Select a video game from the dropdown.</p>
+        <h1 class="head">Brawl Stars</h1>
+        <p>This page currently has no content.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
