--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,15 @@
     </head>
     <body>
         <h1 class="head">Contact</h1>
-        <p>This page currently has no content. Please select a contact option in the dropdown.</p>
+        <p>This is where you can contact me. You can eiter write a <a href="comment.html">public comment</a>, which after being moderated can be seen by everyone, or a <a href="pm.html">private message</a>, which will only be seen by me.</p>
+        <h1>FAQ</h1>
+        <p>
+            <strong>Why did I make this website?</strong><br>
+            I like making random websites and I like coding, and my sister also wanted to make a blog, so I decided to make a showcase (renamed to portfolio) without a drag-and-drop editor like google sites.<br><br>
+            <strong>How did I make (that thing) on the website?</strong><br>
+            I used HTML, CSS, and maybe a little Javascript. Right click the page and select inspect to 
+
+        </p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
