--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </head>
     <body>
         <h1 class="head">Home</h1>
-        <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done, </p>
+        <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done and also some other things I like.</p><br>
+        <center><a class="button" href="#">New Page</a></center>
+        <p>This is a new page. It was last updated recently. It contains a lot of information on new stuff, fast pages, and new pages. Go to the new page to learn more.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
