--- a/school.html
+++ b/school.html
@@ -47,7 +47,7 @@
     </head>
     <body>
         <h1 class="head">School</h1>
-        <p>This page currently has no content. Select a school option from the dropdown.</p>
+        <p>I go to school.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
