--- a/activities.html
+++ b/activities.html
@@ -46,8 +46,8 @@
         </div></center>
     </head>
     <body>
-        <h1 class="head">Brawl Stars</h1>
-        <p>This page currently has no content.</p>
+        <h1 class="head">Activities</h1>
+        <p>Here is a collection of things I do for fun, including sports and video games.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
