--- a/technology.html
+++ b/technology.html
@@ -47,7 +47,7 @@
     </head>
     <body>
         <h1 class="head">Technology</h1>
-        <p>This page currently has no content. Select a technology option from the dropdown.</p>
+        <p>Computer stuff are one of my favorite things to do. I will talk about things I have done in <a href="javascript.html">Javascript</a > and <a href="cad.html">CAD</a >.</p> 
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
