--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <strong>Why did I make this website?</strong><br>
             I like making random websites and I like coding, and my sister also wanted to make a blog, so I decided to make a showcase (renamed to portfolio) without a drag-and-drop editor like google sites.<br><br>
             <strong>How did I make (that thing) on the website?</strong><br>
-            I used HTML, CSS, and maybe a little Javascript. Right click the page and select inspect to 
+            I used HTML, CSS, and maybe a little Javascript. Please go to <a href="https://github.com/tims-portfolio/tims-portfolio.github.io" target="_blank">the github repository</a> to see all of the code and files.
 
         </p>
     </body>
