--- a/javascript.html
+++ b/javascript.html
@@ -48,6 +48,8 @@
     <body>
         <h1 class="head">Javascript</h1>
         <p>Here is a collection of things I have done in Javascript.</p>
+        <h1>Discord Bot</h1>
+        <p>I am currently working on a discord bot. It is being hosted with glitch.</p>
         <h1>Sun Setting</h1>
         <p>Here is a project I coded on Khan Academy, where you can program using javascript and processing js. I coded it to have the sun start at the top then slowly move to the bottom as the background color slowly changes to simulate a sunset.</p>
         <p> 
