--- a/404.html
+++ b/404.html
@@ -47,9 +47,10 @@
     </head>
     <body>
         <h1 class="head">Error 404</h1>
-        <p>Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!<br><strong>You will redirected to the homepage in 10 seconds.</strong></p>
+        <p>Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!</p>
+        <h2>You will be redirected to the homepage in 5 seconds.</h2>
         <img src="media/cat.jpg" alt="Cat with different colored eyes" style="width:500px;height:400px;" class="center">
-        <meta http-equiv="refresh" content="10; url=https://timsportfolio.github.io/index.html">
+        <meta http-equiv="refresh" content="5; url=https://timsportfolio.github.io/index.html">
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
