Updated Blank Pages, New Page
Updated Brawl Stars, added shortcuts pages.

--- a/brawlstars.html
+++ b/brawlstars.html
@@ -11,8 +11,9 @@
             <div class="dropdown">
                 <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
                 <div class="dropdown-content">
-                  <a href="javascript.html">Javascript</a>
-                  <a href="cad.html">CAD</a>
+                    <a href="shortcuts.html">Shortcuts</a>
+                    <a href="javascript.html">Javascript</a>
+                    <a href="cad.html">CAD</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -47,7 +48,49 @@
     </head>
     <body>
         <h1 class="head">Brawl Stars</h1>
-        <p>This page currently has no content.</p>
+        <h1>Stats</h1>
+        <h2>Trophies</h2>
+        <p>Last Updated: 7/28/2020</p>
+        <h3>10,469</h3>
+        <h2>Brawlers</h2>
+        <p>Last Updated: 7/28/2020</p>
+        <ol>Trophy Road Brawlers (11/11)
+            <li>Shelly</li>
+            <li>Nita</li>
+            <li>Colt</li>
+            <li>Bull</li>
+            <li>Jessie</li>
+            <li>Brock</li>
+            <li>Dynamike</li>
+            <li>Bo</li>
+            <li>Tick</li>
+            <li>8-Bit</li>
+            <li>Emz</li>
+        </ol><ol>Rare Brawlers (4/4)
+            <li>El Primo</li>
+            <li>Barley</li>
+            <li>Poco</li>
+            <li>Rosa</li>
+        </ol><ol>Super Rare Brawlers (5/5)
+            <li>Rico</li>
+            <li>Daryl</li>
+            <li>Penny</li>
+            <li>Carl</li>
+            <li>Jacky</li>
+        </ol><ol>Epic Brawlers (4/6)
+            <li>Pam</li>
+            <li>Frank</li>
+            <li>Bibi</li>
+            <li>Bea</li>
+        </ol><ol>Mythic Brawlers (3/6)
+            <li>Mortis</li>
+            <li>Gene</li>
+            <li>Max</li>
+        </ol><ol>Legendary Brawlers (1/4)
+            <li>Spike</li>
+        </ol><ol>Chromatic Brawlers (0/2)
+        </ol>
+
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
