--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             <div class="dropdown">
                 <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
                 <div class="dropdown-content">
-                  <a href="javascript.html">Javascript</a>
-                  <a href="cad.html">CAD</a>
+                    <a href="shortcuts.html">Shortcuts</a>
+                    <a href="javascript.html">Javascript</a>
+                    <a href="cad.html">CAD</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -48,8 +49,8 @@
     <body>
         <h1 class="head">Home</h1>
         <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done and also some other things I like.</p><br>
-        <center><a class="button" href="#">New Page</a></center>
-        <p>This is a new page. It was last updated recently. It contains a lot of information on new stuff, fast pages, and new pages. Go to the new page to learn more.</p>
+        <center><a class="button" href="rockclimbing.html">Rock Climbing</a></center>
+        <p>See my rock climbing stats!</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
