--- a/rockclimbing.html
+++ b/rockclimbing.html
@@ -11,8 +11,9 @@
             <div class="dropdown">
                 <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
                 <div class="dropdown-content">
-                  <a href="javascript.html">Javascript</a>
-                  <a href="cad.html">CAD</a>
+                    <a href="shortcuts.html">Shortcuts</a>
+                    <a href="javascript.html">Javascript</a>
+                    <a href="cad.html">CAD</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -47,7 +48,13 @@
     </head>
     <body>
         <h1 class="head">Rock Climbing</h1>
-        <p>This page currently has no content. Select a technology option from the dropdown.</p>
+        <p>I first started rock climbing at sender one. However because of Covid-19 I climb outdoors now. So far I have climbed at Pirate's Cove at Corona Del Mar.</p>
+        <h1>Stats</h1>
+        <p>
+            <strong>Indoor Bouldering Redpoint: </strong>v7<br>
+            <strong>Indoor Toprope Redpoint: </strong>5.12b<br>
+            <strong>Indoor Lead Redpoint: </strong>5.11a
+        </p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
