--- a/shortcuts.html
+++ b/shortcuts.html
@@ -47,8 +47,14 @@
         </div></center>
     </head>
     <body>
-        <h1 class="head">Technology</h1>
-        <p>Computer stuff are one of my favorite things to do. I will talk about things I have done in <a href="javascript.html">Javascript</a > and <a href="cad.html">CAD</a >.</p> 
+        <h1 class="head">Shortcuts</h1>
+        <p>Welcome to my shortcuts page. This is where I will document all of the weird, fun, and sometimes useful shortcuts.</p>
+        <h1>What are shorcuts?</h1>
+        <p>Shorcuts are automations that will preform a series of tasks once you trigger it. This is useful for automating repetative tasks, but can also be used to create fun programs. Most of the shorcuts that are mentioned here are not used to automate a task but to do a completely new job that probably wasn't needed in the first place.</p>
+        <h1>My shortcuts</h1>
+        <h2>App Logger</h2>
+        <p>This applet uses Apple Shortcuts. It is actually created with many different shortcuts working together. (More info comming later)</p>
+
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
