--- a/404.html
+++ b/404.html
@@ -11,8 +11,9 @@
             <div class="dropdown">
                 <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
                 <div class="dropdown-content">
-                  <a href="javascript.html">Javascript</a>
-                  <a href="cad.html">CAD</a>
+                    <a href="shortcuts.html">Shortcuts</a>
+                    <a href="javascript.html">Javascript</a>
+                    <a href="cad.html">CAD</a>
                 </div>
             </div>
             <div class="dropdown">
