--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done and also some other things I like.</p><br>
         <center><a class="button" href="rockclimbing.html">Rock Climbing</a></center>
         <p>See my rock climbing stats!</p>
+        <center><a class="button" href="shortcuts.html">Shortcuts</a></center>
+        <p>See the weird automations I made that don't really help with everyday life.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
