Fixed Header and Links

--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Timothy's Portfolio">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Contact</title>
@@ -42,13 +42,13 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-text-body-color u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Technology.html" style="padding: 10px 20px;">Technology</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Shortcuts.html">Shortcuts</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Cad</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Javascript.html">Javascript</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Cad.html">Cad</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Rock Climbing</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Minecraft</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Brawl Stars</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Rock-Climbing.html">Rock Climbing</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Minecraft.html">Minecraft</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Brawl-Stars.html">Brawl Stars</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="School.html" style="padding: 10px 20px;">School</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Math.html">Math</a>
@@ -69,13 +69,13 @@
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-7"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Technology.html" style="padding: 10px 20px;">Technology</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Shortcuts.html">Shortcuts</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Cad</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Javascript.html">Javascript</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Cad.html">Cad</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9"><li class="u-nav-item"><a class="u-button-style u-nav-link">Rock Climbing</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Minecraft</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Brawl Stars</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Rock-Climbing.html">Rock Climbing</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Minecraft.html">Minecraft</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Brawl-Stars.html">Brawl Stars</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="School.html" style="padding: 10px 20px;">School</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Math.html">Math</a>
@@ -95,12 +95,12 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-section-1" id="sec-92de">
+    <section class="u-align-center u-clearfix u-section-1" id="sec-84fa">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-default u-text-1">This is where you can contact me. You can eiter write a&nbsp;public comment, which after being moderated can be seen by everyone, or a&nbsp;private message, which will only be seen by me.</p>
         <h1 class="u-text u-text-default u-text-2">FAQs</h1>
         <p class="u-text u-text-default u-text-3"><b>Why did I make this website?<br></b>I like making random websites and I like coding, and my sister also wanted to make a blog, so I decided to make a showcase (renamed to portfolio) with html.<br>
-          <br><b>How did I make (that thing) on the website?<br></b>I used HTML, CSS, and maybe a little Javascript. Please go to the <a href="https://nicepage.com" class="u-btn u-button-style u-none u-text-palette-1-base u-btn-1">github repository</a> to see all of the code and files.
+          <br><b>How did I make (that thing) on the website?<br></b>I used HTML, CSS, and maybe a little Javascript. Please go to the <a href="https://github.com/TimsPortfolio/timsportfolio.github.io" class="u-btn u-button-style u-none u-text-palette-1-base u-btn-1" target="_blank">github repository</a> to see all of the code and files.
         </p>
       </div>
     </section>
