--- a/Literature.html
+++ b/Literature.html
@@ -45,13 +45,13 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-text-body-color u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Technology.html" style="padding: 10px 20px;">Technology</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Shortcuts.html">Shortcuts</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Cad</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Javascript.html">Javascript</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Cad.html">Cad</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Rock Climbing</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Minecraft</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Brawl Stars</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Rock-Climbing.html">Rock Climbing</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Minecraft.html">Minecraft</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Brawl-Stars.html">Brawl Stars</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="School.html" style="padding: 10px 20px;">School</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Math.html">Math</a>
@@ -72,13 +72,13 @@
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-7"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Technology.html" style="padding: 10px 20px;">Technology</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Shortcuts.html">Shortcuts</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Cad</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Javascript.html">Javascript</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Cad.html">Cad</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9"><li class="u-nav-item"><a class="u-button-style u-nav-link">Rock Climbing</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Minecraft</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">Brawl Stars</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Rock-Climbing.html">Rock Climbing</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Minecraft.html">Minecraft</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Brawl-Stars.html">Brawl Stars</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="School.html" style="padding: 10px 20px;">School</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Math.html">Math</a>
